title and presenters

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Open and Collaborative Methods of Legal Services Program Administration in the Age of Automation</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
@@ -23,10 +23,20 @@
 	</head>
 	<body>
 		<div class="reveal">
-			<div class="slides">
-				<section>Intros</section>
-				<section>Why FOSS in LS?</section>
-			</div>
+		  <div class="slides">
+                    <section>
+                      <h2>Open and Collaborative Methods of Legal Services Program Administration in the Age of Automation</h2>
+                      <h4>Innovations in Technology Conference<br>New Orleans, January 2018</h4>
+                    </section>
+                    <section>
+                      <h3>The presenters</h3>
+                      <ul>
+                        <li>Nathan Vogel, Director of Law and Technology, <a href="https://clsphila.org">Community Legal Services</a><br><small>GitHub username: <a href="https://github.com/NateV">NateV</a></small></li>
+                        <li>Jonathan Pyle, Contract Performance Officer, <a href="https://philalegal.org">Philadelphia Legal Assistance</a><br><small>GitHub username: <a href="https://github.com/jpylephilalegal">jpylephilalegal</a></small></li>
+                      </ul>
+                    </section>
+		    <section>Why FOSS in LS?</section>
+		  </div>
 		</div>
 
 		<script src="lib/js/head.min.js"></script>
