--- a/index.html
+++ b/index.html
@@ -27,15 +27,53 @@
                     <section>
                       <h2>Open and Collaborative Methods of Legal Services Program Administration in the Age of Automation</h2>
                       <h4>Innovations in Technology Conference<br>New Orleans, January 2018</h4>
+                      <div style="float: left">
+                        <a target="cls" href="https://clsphila.org"><img class="plain" style="height: 200px; background: none;" src="assets/CLS-logo.png"></a>
+                      </div>
+                      <div style="float: right">
+                        <a target="pla" href="https://philalegal.org"><img class="plain" style="height: 200px; background: none;" src="assets/PLA-logo.png"></a>
+                      </div>
                     </section>
                     <section>
                       <h3>The presenters</h3>
                       <ul>
-                        <li>Nathan Vogel, Director of Law and Technology, <a href="https://clsphila.org">Community Legal Services</a><br><small>GitHub username: <a href="https://github.com/NateV">NateV</a></small></li>
-                        <li>Jonathan Pyle, Contract Performance Officer, <a href="https://philalegal.org">Philadelphia Legal Assistance</a><br><small>GitHub username: <a href="https://github.com/jpylephilalegal">jpylephilalegal</a></small></li>
+                        <li>Nathan Vogel, Director of Law and Technology, <a target="cls" href="https://clsphila.org">Community Legal Services</a><br><small>GitHub username: <a target="github" href="https://github.com/NateV">NateV</a></small></li>
+                        <li>Jonathan Pyle, Contract Performance Officer, <a target="pla" href="https://philalegal.org">Philadelphia Legal Assistance</a><br><small>GitHub username: <a target="github" href="https://github.com/jpylephilalegal">jpylephilalegal</a></small></li>
                       </ul>
                     </section>
 		    <section>Why FOSS in LS?</section>
+                    <section>
+                      <h3>Reproducible Research</h3>
+                    </section>
+                    <section>
+                      <h3>Using R</h3>
+                      <img class="plain" src="assets/learning-r.jpg">
+                    </section>
+                    <section>
+                      <h3>Using Python</h3>
+                      <img class="plain" src="assets/python-for-data-analysis.jpg">
+                    </section>
+                    <section>
+                      <h3>Using Jupyter Notebooks</h3>
+                      <a target="jupyter" href="http://localhost:8888"><img src="assets/jupyter.png"></a>
+                    </section>
+                    <section>
+                      <h3>Behavior Driven Development</h3>
+                      <h4>and automated testing</h4>
+                    </section>
+                    <section>
+                      <h3>Version Control Systems</h3>
+                      <p><em>Why use them?</em></p>
+                      <ul>
+                        <li class="fragment">Peace of mind</li>
+                        <li class="fragment">Transparency</li>
+                        <li class="fragment">Reproducibility</li>
+                        <li class="fragment">Collaboration</li>
+                      </ul>
+                    </section>
+                    <section>
+                      <img class="plain" style="background: #aaa; padding: 20px; border-radius: 50px;" src="assets/github-logo.png">
+                    </section>
 		  </div>
 		</div>
 
