adding some slides and images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Open Source in Legal Services</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
@@ -24,8 +24,83 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Intros</section>
-				<section>Why FOSS in LS?</section>
+				<section>
+					Open and Collaborative Methods of Legal Services Program Administration in the Age of Automation
+				</section>
+				<section>Hi.</section>
+				<section>
+					<section>
+							<ul style="list-style:none;">
+								<li><span style="color: #f47d42; font-size: 2em">F</span>ree</li>
+								<li><span style="color: #f47d42; font-size: 2em">O</span>pen</li>
+								<li><span style="color: #f47d42; font-size: 2em">S</span>ource</li>
+								<li><span style="color: #f47d42; font-size: 2em">S</span>oftware</li>
+							</ul>
+					</section>
+					<section>Why <span style="#f47d42;">FOSS</span> in Legal Services?</section>
+					<section>Free stuff</section>
+					<section>Shared Commons</section>
+					<section>Not just code</section>
+				</section>
+				<section>
+					<section>Behavior Driven Development</section>
+					<section>Concepts</section>
+					<section>Example</section>
+				</section>
+				<section>
+					Ongoing Testing
+				</section>
+				<section>
+					<section>Reproducible Fancy Reporting</section>
+					<section> <img src="https://www.r-project.org/logo/Rlogo.png" width=150px height=150px alt="R"> </section>
+					<section> RStudio </section>
+					<section> Knit a report with R and RStudio </section>
+				</section>
+				<section>
+					<section> Developing Open Source code projects </section>
+					<section> <img src="https://git-scm.com/images/logos/1color-darkbg@2x.png" alt="git"> </section>
+					<section>
+						<ul style="list-style:none;">
+							<li> <img src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" height=100px alt="github"> </li>
+							<li> <img src="https://www.atlassian.com/dam/jcr:e2a6f06f-b3d5-4002-aed3-73539c56a2eb/Bitbucket@2x-blue.png" height=100px alt="bitbucket"></li>
+							<li> <img src="https://gitlab.com/gitlab-com/gitlab-artwork/raw/master/wordmark/wm_no_bg.png" height=100px alt="gitlab"></li>
+						</ul>
+					</section>
+					<section>
+						<ul>
+							<li> Transparency </li>
+							<li> Reproduceability </li>
+							<li> Collaboration </li>
+						</ul>
+					</section>
+					<section>
+						A good baseline repository structure
+						<pre>
+							<code data-trim>
+								project-root
+								|
+								|- .git/
+								|- .gitignore
+								|- README.md
+								|- docs/
+								|- tests/
+								|- project-code/
+							</code>
+						</pre>
+					</section>
+				</section>
+				<section>
+					<table>
+						<tr>
+							<td style="text-align:center;"> <img src="https://avatars3.githubusercontent.com/u/1690089?s=460&v=4" height=150px width=150px> </td>
+							<td style="text-align:center;"> <img src="https://avatars1.githubusercontent.com/u/25371864?s=460&v=4" height=150px width=150x> </td>
+						</tr>
+						<tr>
+							<td style="text-align:center;"> <div> Nate Vogel </div> <div> nvogel@clsphila.org </div> </td>
+							<td style="text-align:center;"> <div> Jonathan Pyle </div> <div> jpyle@philalegal.org </div> </td>
+						</tr>
+					</table>
+				</section>
 			</div>
 		</div>
 
