--- a/index.html
+++ b/index.html
@@ -58,8 +58,40 @@
                       <a target="jupyter" href="http://localhost:8888"><img src="assets/jupyter.png"></a>
                     </section>
                     <section>
-                      <h3>Behavior Driven Development</h3>
-                      <h4>and automated testing</h4>
+                      <section>
+                        <h3>Behavior Driven Development (BDD)</h3>
+                        <h4>and automated testing</h4>
+                        <p><em>What is BDD?</em></p>
+                        <ul>
+                          <li class="fragment">Merges specification of requirements with validation testing</li>
+                          <li class="fragment">Includes non-techies in the development process</li>
+                          <li class="fragment">Makes non-techies more responsible</li>
+                          <li class="fragment">Provides iterative process for developing system and ensuring validity</li>
+                        </ul>
+                      </section>
+                      <section>
+                        <h3>Testing</h3>
+                        <p><em>Why is it important?</em></p>
+                        <ul>
+                          <li class="fragment">Does the system do what it should?</li>
+                          <li class="fragment">Can it handle unusual situations?</li>
+                          <li class="fragment">It might work now, but if it breaks, will you know?</li>
+                        </ul>
+                      </section>
+                      <section>
+                        <h3>Cucumber</h3>
+                      </section>
+                      <section>
+                        <h3>Lettuce</h3>
+                      </section>
+                      <section>
+                        <h3>Example</h3>
+                        <p>On-line intake system for pro bono divorce clinic</p>
+                      </section>
+                      <section>
+                        <h3>Example</h3>
+                        <p>Automating processes in Legal Server</p>
+                      </section>
                     </section>
                     <section>
                       <h3>Version Control Systems</h3>
@@ -70,6 +102,9 @@
                         <li class="fragment">Reproducibility</li>
                         <li class="fragment">Collaboration</li>
                       </ul>
+                    </section>
+                    <section>
+                      <h3>MediaWiki</h3>
                     </section>
                     <section>
                       <img class="plain" style="background: #aaa; padding: 20px; border-radius: 50px;" src="assets/github-logo.png">
