adding code bits

--- a/index.html
+++ b/index.html
@@ -56,11 +56,28 @@
 					<section>Not just code</section>
 				</section>
 				<section>
-					<section>Reproducible Fancy Reporting with <em>R</em></section>
-					<section> <img src="https://www.r-project.org/logo/Rlogo.png" width=150px height=150px alt="R"> </section>
-					<section> RStudio </section>
+					<section>
+						Reproducible Fancy Reporting with <em>R</em>
+					</section>
+					<section>
+						<img src="https://www.r-project.org/logo/Rlogo.png" width=150px height=150px alt="R">
+						<pre>
+							<code data-trim>
+								> an.example <- seq(1:10)
+								> an.example
+ 								[1]  1  2  3  4  5  6  7  8  9 10
+								> an.example * 2
+ 								[1]  2  4  6  8 10 12 14 16 18 20
+							</code>
+						</pre>
+					</section>
+					<section>
+						RStudio
+						<img src="/assets/rscreenshot.png">
+					</section>
 					<section> Knit a report with R and RStudio </section>
 				</section>
+
 				<section>
 					<section>Reproducible Fancy Reporting with <em>Python</em></section>
 					<section>
@@ -71,45 +88,46 @@
 						<h3>Using Jupyter Notebooks</h3>
 						<a target="jupyter" href="http://localhost:8888"><img src="assets/jupyter.png"></a>
 					</section>
-					<section>
-						<h3>Behavior Driven Development</h3>
-						<h4>and automated testing</h4>
-					</section>
+				</section>
+				<section>
+					<h3>Behavior Driven Development</h3>
+					<h4>and automated testing</h4>
+				</section>
 
+				<section>
 					<section>
-						<section>
-							<h3>Version Control Systems</h3>
-							<p><em>Why use them?</em></p>
-							<ul>
-								<li class="fragment">Peace of mind</li>
-								<li class="fragment">Transparency</li>
-								<li class="fragment">Reproducibility</li>
-								<li class="fragment">Collaboration</li>
-							</ul>
-						</section>
-						<section> <img src="https://git-scm.com/images/logos/1color-darkbg@2x.png" alt="git"> </section>
-						<section>
-							<ul style="list-style:none;">
-								<li> <img src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" height=100px alt="github"> </li>
-								<li> <img src="https://www.atlassian.com/dam/jcr:e2a6f06f-b3d5-4002-aed3-73539c56a2eb/Bitbucket@2x-blue.png" height=100px alt="bitbucket"></li>
-								<li> <img src="https://gitlab.com/gitlab-com/gitlab-artwork/raw/master/wordmark/wm_no_bg.png" height=100px alt="gitlab"></li>
-							</ul>
-						</section>
-						<section>
-							A good baseline repository structure
-							<pre>
-								<code data-trim>
-									project-root
-									|
-									|- .git/
-									|- .gitignore
-									|- README.md
-									|- docs/
-									|- tests/
-									|- project-code/
-								</code>
-							</pre>
-						</section>
+						<h3>Version Control Systems</h3>
+						<p><em>Why use them?</em></p>
+						<ul>
+							<li class="fragment">Peace of mind</li>
+							<li class="fragment">Transparency</li>
+							<li class="fragment">Reproducibility</li>
+							<li class="fragment">Collaboration</li>
+						</ul>
+					</section>
+					<section> <img src="https://git-scm.com/images/logos/1color-darkbg@2x.png" alt="git"> </section>
+					<section>
+						<ul style="list-style:none;">
+							<li> <img src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" height=100px alt="github"> </li>
+							<li> <img src="https://www.atlassian.com/dam/jcr:e2a6f06f-b3d5-4002-aed3-73539c56a2eb/Bitbucket@2x-blue.png" height=100px alt="bitbucket"></li>
+							<li> <img src="https://gitlab.com/gitlab-com/gitlab-artwork/raw/master/wordmark/wm_no_bg.png" height=100px alt="gitlab"></li>
+						</ul>
+					</section>
+					<section>
+						A good baseline repository structure
+						<pre>
+							<code data-trim>
+								project-root
+								|
+								|- .git/
+								|- .gitignore
+								|- README.md
+								|- docs/
+								|- tests/
+								|- project-code/
+							</code>
+						</pre>
+					</section>
 					</section>
 					<section>
 						<table>
