fixed typo with path to a local image.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					</section>
 					<section>
 						RStudio
-						<img src="/assets/rscreenshot.png">
+						<img src="assets/rscreenshot.png">
 					</section>
 					<section> Knit a report with R and RStudio </section>
 				</section>
