added rmarkdown screenshots

--- a/index.html
+++ b/index.html
@@ -75,7 +75,12 @@
 						RStudio
 						<img src="assets/rscreenshot.png">
 					</section>
-					<section> Knit a report with R and RStudio </section>
+					<section> Knit R code ...
+						<img src="assets/rmarkdown.png">
+					</section>
+					<section> into narrative reports
+						<img src="assets/reportpart.png">
+					</section>
 				</section>
 
 				<section>
