--- a/index.html
+++ b/index.html
@@ -61,6 +61,22 @@
                         </ul>
                       </section>
                       <section>
+                        <a target="cucumber" href="https://cucumber.io/"><img class="plain" style="background: white; padding: 80px; border-radius: 120px;" src="assets/cucumber.png"></a>
+                      </section>
+                      <section>
+                        <h3>Lettuce</h3>
+                        <a target="lettuce" href="http://lettuce.it/"><img class="plain" style="background: none;" src="assets/lettuce.png"></a>
+                      </section>
+                      <section>
+                        <h3>Example</h3>
+                        <p>On-line intake system for pro bono divorce clinic</p>
+                        <a target="oli" href="https://plaoi.legalserver.org/modules/matter/extern_intake.php?pid=71&h=9feda9&"><img src="assets/oli.png"></a>
+                      </section>
+                      <section>
+                        <h3>Other possibilities</h3>
+                        <p>Automating processes in Legal Server</p>
+                      </section>
+                      <section>
                         <h3>Testing</h3>
                         <p><em>Why is it important?</em></p>
                         <ul>
@@ -69,23 +85,6 @@
                           <li class="fragment">It might work now, but if it breaks, will you know?</li>
                         </ul>
                       </section>
-                      <section>
-                        <h3>Cucumber</h3>
-                      </section>
-                      <section>
-                        <h3>Lettuce</h3>
-                      </section>
-                      <section>
-                        <h3>Example #1</h3>
-                        <p>On-line intake system for pro bono divorce clinic</p>
-                      </section>
-                      <section>
-                        <h3>Example #2</h3>
-                        <p>Automating processes in Legal Server</p>
-                      </section>
-		      <section>
-		        Ongoing Testing
-		      </section>
                     </section>
                     <section>
                       <section>
@@ -113,6 +112,10 @@
                       <section>
                         <h3>Using Jupyter Notebooks</h3>
                         <a target="jupyter" href="http://localhost:8888"><img src="assets/jupyter.png"></a>
+                      </section>
+                      <section>
+                        <h3>Contextual documentation</h3>
+                        <img class="plain" src="assets/configuration-notes.png"></a>
                       </section>
 		    </section>
                     <section>
@@ -143,7 +146,7 @@
                       </section>
 		      <section>
 		        Best practice repository structure
-		        <pre>
+                        <pre>
 			  <code data-trim>
 			    project-root
 			    |
@@ -154,8 +157,20 @@
 			    |- tests/
 			    |- project-files/
 			  </code>
-		        </pre>
+                        </pre>
 		      </section>
+                      <section>
+                        <h3>If you just want to share, use a Gist!</h3>
+                        <a target="gist" href="https://gist.github.com/jpylephilalegal/8a9cbeac6b0ae527b52133f7d49f555f"><img src="assets/gist.png"></a>
+		      </section>
+                    </section>
+                    <section>
+                      <h3>Where to share</h3>
+                      <ul>
+                        <li><a href="http://lists.lsntap.org/cgi-bin/mailman/listinfo/lstech">LSTech e-mail list</a></li>
+                        <li><a href="https://justicehub.tools">Justice Hub</a></li>
+                        <li><a href="https://a2jtech.slack.com/">A2J Tech & Design Collaborative Slack group</a><br><small>E-mail <a href="mailto:info@curolegal.com">info@curolegal.com</a> to request an invite</small></li>
+                      </ul>
                     </section>
                     <section>
                       <h3>The presenters</h3>
